--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=pt
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=pt
 APP_FAKER_LOCALE=pt_BR
 
@@ -63,3 +63,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+NEWS_API_KEY=YOUR_NEWS_API_KEY
+NEWS_API_URL=YOUR_NEWS_API_URL
